syntax="proto3";
package intercom;
message OneMessage{
    //消息编号
    uint64 rek=1;
    //发送方id
    uint32 sender=2;
    //接收方id
    uint32 receiver=3;
    //消息内容
    string msgbody=4;
    //消息类型
    uint32 msgtype=5;
    //消息时序
    uint32 time=6;

}

message GroupMessage{
    uint64 rek=1;

    uint32 sender=2;
    //群组Id
    uint32 groupid=3;

    string msgbody=4;

    uint32 msgtype=5;

    uint32 time=6;

}
message AuthMessage{
    string token=1;
}
message AuthSuccessMessage{
    uint32 status=1;

}
message AckMessage{
    uint64 rek=1;
    uint32 msgtype=2;
    uint32 status=3;
}
message PullOneMessages{
    repeated OneMessage messages=1;
}
message PullGroupMessages{
    repeated GroupMessage messages=1;
}
message PullNotifieMessage{
    repeated Notify messages=1;
}
message AckManyMesasges{
    repeated uint64 reks=1;
    uint32 msgtype=2;
    uint32 status=3;

}
message DeleteManyMessages{
    repeated uint64 reks=1;
    uint32 msgtype=2;
}
message Notify{
    //通知id
    uint32 notifieType=1;
    //接收人id
    bytes body=2;
}
//同意好友请求的通知
message Agree{
    //招呼内容
    FriendNotife notife=1;
 }
 message FriendNotife{
    string greet=1;
    uint32 uid=2;
    uint32 receiver=3;
    uint32 nid=4;
}
